* string.c (rb_str_enumerate_lines): fix invalid byte sequence error   when a separator is passed. The patch is from yoshidam (Yoshida   Masato).   [Bug #7646] [ruby-dev:46827]

* test/ruby/test_string.rb: a test for above.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38704 b2dd03c8-39d4-4d8f-98ff-823fe69b080e